--- a/docker/ci/Dockerfile-clang
+++ b/docker/ci/Dockerfile-clang
@@ -12,12 +12,12 @@ RUN apt-get update -qq && apt-get install -yqq \
     cargo
 
 RUN apt-get update -qq && apt-get install -yqq \
-    clang lldb
+    clang-3.9 lldb-3.9
 
-ENV CXX=/usr/bin/clang++
-ENV CC=/usr/bin/clang
-RUN update-alternatives --install /usr/bin/cc cc /usr/bin/clang 100
-RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++ 100
+ENV CXX=/usr/bin/clang++-3.9
+ENV CC=/usr/bin/clang-3.9
+RUN update-alternatives --install /usr/bin/cc cc /usr/bin/clang-3.9 100
+RUN update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-3.9 100
 ENV BOOST_ROOT=/usr/local
 ADD util/build_prep/bootstrap_boost.sh bootstrap_boost.sh
 
